fix: spacing issues for main containers with larger header

--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -5,7 +5,7 @@
 @import "breakpoints";
 
 .container-home {
-    margin-top: 65px;
+    margin-top: 80px;
 }
 
 .portfolio-image {
