--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -26,5 +26,5 @@ a {
 }
 
 .container-main {
-    margin-top: 65px;
+    margin-top: 80px;
 }
